samples/_failures_safe/1761660485_a84aaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f4e1f77.c: In function ‘main’:
./samples/SAFE/__tmp_1f4e1f77.c:141:12: error: missing terminating " character
  141 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_1f4e1f77.c:141:5: error: expected expression at end of input
  141 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_1f4e1f77.c:141:5: error: expected declaration or statement at end of input
